# MineGPT

./: README.md  build.gradle.kts  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/org/onion/gpt/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/org/onion/gpt/llm/: LLMReader.android.kt  LLMTalker.android.kt
composeApp/src/androidMain/kotlin/org/onion/gpt/ui/theme/: Theme.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/files/: anim_ai_file_.lottie
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/kotlin/org/onion/gpt/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/di/: Modules.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/llm/: LLMReader.kt  LLMTalker.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/ui/navigation/: NavActions.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/ui/navigation/destination/: RootDestination.kt  Screen.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/ui/navigation/graph/: RootNavGraph.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/ui/screen/home/: ChatViewModel.kt  HomeScreen.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/ui/screen/home/model/: ChatModel.kt  TextModel.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/ui/screen/splash/: SplashScreen.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/ui/theme/: AdaptiveLayout.kt  Color.kt  ColorScheme.kt  Shape.kt  Size.kt  Spacing.kt  Text.kt  Theme.kt  Typography.kt
composeApp/src/commonMain/kotlin/org/onion/gpt/ui/utils/: Animations.kt  ImageLoader.kt  WindowsStateUtils.kt
composeApp/src/desktopMain/kotlin/org/onion/gpt/: Platform.jvm.kt  main.kt
composeApp/src/desktopMain/kotlin/org/onion/gpt/llm/: LLMReader.jvm.kt  LLMReader.kt  LLMTalker.jvm.kt  LLMTalker.kt
composeApp/src/iosMain/kotlin/org/onion/gpt/: MainViewController.kt  Platform.ios.kt
composeApp/src/iosMain/kotlin/org/onion/gpt/ui/theme/: Theme.ios.kt
composeApp/src/jvmMain/kotlin/org/onion/gpt/utils/: NativeLibraryLoader.kt
composeApp/src/wasmJsMain/kotlin/org/onion/gpt/: Platform.wasmJs.kt  main.kt
composeApp/src/wasmJsMain/kotlin/org/onion/gpt/ui/theme/: Theme.desktop.kt
composeApp/src/wasmJsMain/resources/: index.html
cpp/gguf.cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  smollm.cpp
cpp/llama.cpp/: CMakeLists.txt
cpp/llama.cpp/common/cmake/: build-info-gen-cpp.cmake
docs/: README_EN.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
